--- a/.github/workflows/greet.yaml
+++ b/.github/workflows/greet.yaml
@@ -4,6 +4,6 @@ jobs:
   example:
     runs-on: ubuntu-latest
     steps:
-      - uses: Ch4s3r/greeter-action/greeter@main
+      - uses: Ch4s3r/greeter-action/.github/actions/greeter@main
         with:
           who-to-greet: "GitHub Actions"
