Update greeter action reference in greet.yaml to use .yaml extension

--- a/.github/workflows/greet.yaml
+++ b/.github/workflows/greet.yaml
@@ -2,6 +2,6 @@ on:
   push:
 jobs:
   example:
-    uses: Ch4s3r/greeter-action/.github/workflows/greeter@main
+    uses: Ch4s3r/greeter-action/.github/workflows/greeter.yaml@main
     with:
       who-to-greet: "GitHub Actions"
