--- a/.github/workflows/greet.yaml
+++ b/.github/workflows/greet.yaml
@@ -2,6 +2,6 @@ on:
   push:
 jobs:
   example:
-    uses: Ch4s3r/greeter-action/.github/workflows/greeter.yaml@main
+    uses: Ch4s3r/greeter-action/.github/workflows/greeter.yaml@1.0.0
     with:
       who-to-greet: "GitHub Actions"
