--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
   "packageRules": [
     {
       "matchManagers": ["github-actions"],
-      "matchPackagePatterns": ["^George"],
+      "matchPackagePatterns": ["^Ch4s3r"],
       "versioning": "regex:^release/(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)$"
     }
   ]
